# Sudoku

./: CMakeLists.txt  README.md  main.cpp  sudoku_checker.h  sudoku_classic.h  sudoku_constants.h  sudoku_diagonal.h  sudoku_generator.h  sudoku_input.cpp  sudoku_input.h  sudoku_show.h  sudoku_solver.h  sudoku_ui.cpp  sudoku_ui.h
.github/workflows/: c-cpp.yml
